--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI="mongodb://0.0.0:27017/sampleApp"
+MONGODB_URI = "mongodb+srv://muhaim25:12345@cluster0.su61nil.mongodb.net/sampleApp"
 PORT= 3000
